pyroscope (0.3.4) hardy; urgency=low

  * chtor: --comment, --bump-date, and --no-date added
  * chtor: dropped --force, and replaced it by --reannounce-all
  * chtor: takes alias names for announe URLs now
  * rtcontrol: added machinery to allow custom field definitions
  * rtcontrol: --help-fields added
  * rtcontrol: interactive mode added (-i, --yes)
  * rtcontrol: --ignore=0|1 added (to set 'ignore commands' flag)
  * rtcontrol: added fields "is_ignored" and "is_active"
  * rtcontrol: added field "directory" (which unlike "path" won't be empty)
  * rtcontrol: --delete added
  * rtcontrol: --throttle=NAME and "throttle" field added
  * Added support for XMLRPC TCP connections (scgi_port)

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 08 Aug 2010 22:13:16 +0200

pyroscope (0.3.3) hardy; urgency=low

  * rtcontrol: --nul option added (for use with "xargs")
  * rtcontrol: --hash-check action added (use with care!)
  * lstor: --raw option added
  * chtor: options --no-skip, --force, --clean, --clean-all,
    --clean-rtorrent, --make-private, --make-public, and
    --no-cross-seed added
  * "done", "prio", "is_ghost" fields added
  * rtmv: tool added (not yet implemented)

 -- pyroscope <pyroscope.project@gmail.com>  Sat, 20 Mar 2010 03:27:08 +0100

pyroscope (0.3.2) hardy; urgency=low

  * rtcontrol: Implemented --start, --close, and --dry-run
  * Fixed encoding issues when printing to a pipe (i.e. not to a tty)
  * Renamed "tracker_alias" to "alias" (adapt your "config.ini")

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 14 Mar 2010 22:17:11 +0100

pyroscope (0.3.1) hardy; urgency=low

  * rtcontrol: Added filtering, sorting and output formatting
  * Added logging configuration

 -- pyroscope <pyroscope.project@gmail.com>  Sat, 13 Mar 2010 23:26:58 +0100

pyroscope (0.2.1) hardy; urgency=low

  * New command line tools "chtor" and "pyroadmin"
  * New option "--debug" for all comannds